--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 <h2>
 <a id="other-metis-projects" class="anchor" href="#other-metis-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other Metis Projects:</h2>
 
-<p><a href="jessicafreaner.github.io/Luther/" title="Exploring MTA Data">Benson</a>
-<a href="jessicafreaner.github.io/McNulty/" title="Exploring Heart Health Data">McNulty</a>
-<a href="jessicafreaner.github.io/Fletcher/" title="Exploring Data with NLP">Fletcher</a>
-<a href="jessicafreaner.github.io/Kojak/" title="Exploring NYC's Moving Populations">Kojak</a></p>
+<p><a href="http://jessicafreaner.github.io/Benson/" title="Exploring MTA Data">Benson</a>
+<a href="http://jessicafreaner.github.io/McNulty/" title="Exploring Heart Health Data">McNulty</a>
+<a href="http://jessicafreaner.github.io/Fletcher/" title="Exploring Data with NLP">Fletcher</a>
+<a href="http://jessicafreaner.github.io/Kojak/" title="Exploring NYC's Moving Populations">Kojak</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/JessicaFreaner/Luther">Luther</a> is maintained by <a href="https://github.com/JessicaFreaner">JessicaFreaner</a>.</span>
