Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,21 +22,29 @@
       <h1>
 <a id="luther---exploring-movie-data" class="anchor" href="#luther---exploring-movie-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Luther - Exploring Movie Data</h1>
 
-<p>Second project within the Metis Bootcamp. Asked to analyze movie data (from Box Office Mojo), I choose to explore relationship between Seasonality / Genre / MPAA Rating interactions and Budget in determining Box Office success (i.e., Domestic Movie Gross). </p>
+<p>Second project within the Metis Bootcamp. Asked to analyze movie data (from <a href="http://www.boxofficemojo.com/" title="Box Office Mojo">Box Office Mojo</a>), I choose to explore relationship between Seasonality / Genre / MPAA Rating interactions and Budget in determining Box Office success (i.e., Domestic Movie Gross). </p>
 
-<p>Data was scraped from over 4,000 movies in Wide Release since 1982. Budget was adjusted for inflation with data obtained from Wolfram Alpha Inflation Adjuster.</p>
+<p>Data was scraped from over 4,000 movies in Wide Release since 1982. Budget was adjusted for inflation with data obtained from <a href="https://www.wolframalpha.com/" title="Wolfram Alpha">Wolfram Alpha</a> Inflation Adjuster.</p>
 
-<p>Ipython Notebook file is the initial cleaning and analysis of the dataset.</p>
+<p>iPython Notebook file is the initial cleaning and analysis of the dataset.</p>
 
-<p>PDF is the final presentation of findings and proposed actions.</p>
+<p><img src="https://cloud.githubusercontent.com/assets/9892419/7359177/83245b98-ed09-11e4-8648-eb1cc2fa7866.jpg" alt="Seasonal Trends For All Movies">
+<img src="https://cloud.githubusercontent.com/assets/9892419/7359178/847d9220-ed09-11e4-8ef4-71ced02cfea0.jpg" alt="Seasonal Trends For Top Movies"></p>
+
+<p>PDF is the <a href="http://www.slideshare.net/JessFreaner/luther-presentation-47482095" title="Slideshare">final presentation</a> of findings and proposed actions.</p>
+
+<p><img src="https://cloud.githubusercontent.com/assets/9892419/7356548/e1a3b3ac-ecf6-11e4-8fb6-be39f563742e.jpg" alt="ThisIsMetis"> </p>
 
 <h2>
 <a id="other-metis-projects" class="anchor" href="#other-metis-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other Metis Projects:</h2>
 
-<p><a href="http://jessicafreaner.github.io/Benson/" title="Exploring MTA Data">Benson</a>
-<a href="http://jessicafreaner.github.io/McNulty/" title="Exploring Heart Health Data">McNulty</a>
-<a href="http://jessicafreaner.github.io/Fletcher/" title="Exploring Data with NLP">Fletcher</a>
-<a href="http://jessicafreaner.github.io/Kojak/" title="Exploring NYC's Moving Populations">Kojak</a></p>
+<p><a href="http://jessicafreaner.github.io/Benson/" title="Exploring MTA Data">Benson</a> - Exploring MTA Data</p>
+
+<p><a href="http://jessicafreaner.github.io/McNulty/" title="Exploring Heart Health Data">McNulty</a> - Exploring Heart Health Data</p>
+
+<p><a href="http://jessicafreaner.github.io/Fletcher/" title="Exploring Data with NLP">Fletcher</a> - Exploring Data with NLP</p>
+
+<p><a href="http://jessicafreaner.github.io/Kojak/" title="Exploring NYC's Moving Populations">Kojak</a> - Exploring NYC's Moving Populations</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/JessicaFreaner/Luther">Luther</a> is maintained by <a href="https://github.com/JessicaFreaner">JessicaFreaner</a>.</span>
