Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
 <p>iPython Notebook file is the initial cleaning and analysis of the dataset.</p>
 
+<p><img src="https://cloud.githubusercontent.com/assets/9892419/7361852/515294f2-ed2e-11e4-9d1d-5064d60f27a3.jpg" alt="Seasonal Trends By Year">
+<img src="https://cloud.githubusercontent.com/assets/9892419/7361853/5314f398-ed2e-11e4-828f-6aab84306baf.jpg" alt="Seasonal Trends By Decade"></p>
+
 <p><img src="https://cloud.githubusercontent.com/assets/9892419/7359177/83245b98-ed09-11e4-8648-eb1cc2fa7866.jpg" alt="Seasonal Trends For All Movies">
 <img src="https://cloud.githubusercontent.com/assets/9892419/7359178/847d9220-ed09-11e4-8ef4-71ced02cfea0.jpg" alt="Seasonal Trends For Top Movies"></p>
 
